# duckdb-ext-st-read-multi

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  generate_test_data.sql
.github/workflows/: MainDistributionPipeline.yml
src/: geojson.rs  gpkg.rs  lib.rs  shapefile.rs  types.rs  utils.rs  wkb.rs
src/shapefile/: datasource.rs  encoding.rs  mod.rs  tests.rs
test/data/: dates.gpkg  multi_layers.gpkg  points.geojson  points.gpkg  points2.geojson  points2.gpkg  points_blob_geom.sql
test/data/different_schema/: points2.geojson
test/data/gpkg_blob_geom/: points_blob_geom.gpkg
test/data/many_rows/: points_2048.dbf  points_2048.geojson  points_2048.gpkg  points_2048.shp  points_2048.shx  points_2049.dbf  points_2049.geojson  points_2049.gpkg  points_2049.shp  points_2049.shx
test/data/shapefile_cp932/: points.dbf
test/data/shapefile_cp932_w_cpg/: points.dbf  points2.dbf  points2.shp
test/data/shapefile_cp932_wo_cpg/: points.dbf  points2.dbf
test/data/shapefile_utf8/: points.dbf  points2.dbf  points2.shx
test/sql/: st_read_multi.test
