[package]
name = "st_read_multi"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.14"
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }

# GIS data
geo-types = "0.7.18"
wkb = "0.9.2"

# GeoJSON
geojson = "0.24.2"
serde_json = "1.0.149"

# Gpkg
rusqlite = { version = "0.36", features = ["bundled"] }

# Shapefile
shapefile = { version = "0.7", features = [
    "encoding_rs",
    "geo-traits",
    "geo-types",
] }
dbase = { version = "0.6", features = ["encoding_rs"] }

# file path
glob = "0.3.2"
home = "0.5.12"

[patch.crates-io]
shapefile = { git = "https://github.com/tmontaigu/shapefile-rs" }
dbase = { git = "https://github.com/yutannihilation/dbase-rs", branch = "fix/cp932-codepage" }
