[package]
name = "st_read_multi"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.10501.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "1.10501.0"
libduckdb-sys = { version = "1.10501.0", features = ["loadable-extension"] }

# GIS data
geo-types = "0.7.18"
wkb = "0.9.2"

# GeoJSON
geojson = "0.24.2"
serde_json = "1.0.149"

# Gpkg
rusqlite = { version = "0.39", features = ["bundled"] }

# Shapefile
shapefile = { version = "0.8", features = [
    "encoding_rs",
    "geo-traits",
    "geo-types",
] }

# file path
glob = "0.3.2"
home = "0.5.12"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] (ReleaseDate)\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/yutannihilation/duckdb-ext-st-read-multi/compare/{{tag_name}}...HEAD", exactly = 1 },
]
